[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/services/game.gd" type="Script" id=1]
[ext_resource path="res://prefabs/attachable_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/defs/skill.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/default_dynamic_font.tres" type="DynamicFont" id=4]

[node name="game" type="Spatial"]
pause_mode = 2
script = ExtResource( 1 )

[node name="attachable_camera" parent="." instance=ExtResource( 2 )]
cull_mask = 524287
fov = 80.0

[node name="skills" type="Node" parent="."]

[node name="Relaxed" type="Node" parent="skills"]
script = ExtResource( 3 )
label = "Very Easy"
speedMultiplier = 0.5
aggressionMultiplier = 0.5

[node name="Brisk" type="Node" parent="skills"]
script = ExtResource( 3 )
label = "Easy"
speedMultiplier = 0.7
aggressionMultiplier = 0.7

[node name="Frisky" type="Node" parent="skills"]
script = ExtResource( 3 )
label = "Medium"
aggressionMultiplier = 0.7

[node name="Nasty" type="Node" parent="skills"]
script = ExtResource( 3 )
label = "Hard"

[node name="Absurd" type="Node" parent="skills"]
script = ExtResource( 3 )
label = "Very Hard"

[node name="game_state_overlay" type="CanvasLayer" parent="."]
layer = 2

[node name="screen_fade" type="ColorRect" parent="game_state_overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pregame" type="Control" parent="game_state_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="game_state_overlay/pregame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 188.0
margin_right = 72.0
margin_bottom = 202.0
text = "PRESS SPACE TO START"
align = 1
valign = 1

[node name="death" type="Control" parent="game_state_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="game_state_overlay/death"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 148.0
margin_right = 128.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="game_state_overlay/death/menu"]
visible = false
margin_right = 256.0
margin_bottom = 14.0
text = "YOU ARE DEAD"
align = 1
valign = 1

[node name="reset" type="Button" parent="game_state_overlay/death/menu"]
margin_right = 256.0
margin_bottom = 20.0
text = "RESTART"

[node name="complete" type="Control" parent="game_state_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="game_state_overlay/complete"]
margin_left = 384.0
margin_top = 128.0
margin_right = 640.0
margin_bottom = 142.0
text = "LEVEL COMPLETE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="game_state_overlay/complete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 148.0
margin_right = 128.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="Button" parent="game_state_overlay/complete/menu"]
margin_right = 256.0
margin_bottom = 20.0
text = "RESTART"

[node name="hint_text" type="Control" parent="game_state_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -300.0
margin_right = 256.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="game_state_overlay/hint_text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 0.505882 )

[node name="hint_label_top" type="Label" parent="game_state_overlay/hint_text"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
text = "HUD hint text goes here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
